Funcionalidade: eventos de click nos botões da tabela brasileirão

--- a/desafio-front/public/index.html
+++ b/desafio-front/public/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link
+			rel="icon"
+			href="https://upload.wikimedia.org/wikipedia/pt/7/70/Campeonato_Brasileiro_S%C3%A9rie_C_logo.png"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -16,7 +19,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>React App</title>
+		<title>Brasileirão</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
